Site build appears complete, moving to user testing for feedback

--- a/src/styles/components/_blog.scss
+++ b/src/styles/components/_blog.scss
@@ -70,6 +70,8 @@
         .container{
           .blog-card{
             width: 20vw;
+            // height: 20vw;
+            background-position: center
           }  
         }
     }
