--- a/src/styles/components/_jumbotron.scss
+++ b/src/styles/components/_jumbotron.scss
@@ -30,7 +30,7 @@
             height: 80vw;
             border-radius: 50%;
             overflow: hidden;
-            border: 1px solid black;
+            border: 1px solid $primary-darkest;
         
         .image-container {
             width: 100%;
