--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -60,7 +60,7 @@ input[type=submit] {
                 padding-top: 2rem;
                 width: 80vw;
                 .cont {
-                    border: 1px solid black;
+                    border: 1px solid $primary-darkest;
                     border-radius: 15px;
                     padding: 0 .5rem 1rem .5rem;
                     text-align: center;
@@ -78,7 +78,7 @@ input[type=submit] {
         .container{
             .form-part{
                 width:30vw;
-                border: 1px solid black;
+                border: 1px solid $primary-darkest;
                 border-radius: 15px;
                 padding: 1rem;
             }
@@ -89,14 +89,18 @@ input[type=submit] {
                 padding-top: 2rem;
                 width: 55vw;
                 .cont {
-                    border: 1px solid black;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    border: 1px solid $primary-darkest;
                     border-radius: 15px;
                     padding: 0 .5rem 1rem .5rem;
-                    text-align: center;
-                    margin: auto;
+                    height: 114px;
+                    // display: inline-block;
                 }
                 img {
-                    width: 45vw;
+                    width: 55vw;
                 }
             }
         }
