--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -81,6 +81,8 @@ input[type=submit] {
                 border: 1px solid $primary-darkest;
                 border-radius: 15px;
                 padding: 1rem;
+                padding-top: 2rem;
+                margin-top: 2rem;
             }
             .other-contact{
                 display: flex;
