--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
     background-color: $primary-lightest;
+    max-width: 100vw;
     width: 100vw;
     height: 96px;
     border-top: 4px solid $primary-darkest;
