--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -332,6 +332,8 @@ input[type=submit]:hover, input[type=submit]:active {
     border: 1px solid #0D1B2A;
     border-radius: 15px;
     padding: 1rem;
+    padding-top: 2rem;
+    margin-top: 2rem;
   }
   .jumbotron .container .other-contact {
     display: flex;
@@ -511,6 +513,7 @@ input[type=submit]:hover, input[type=submit]:active {
 }
 .footer {
   background-color: #778DA9;
+  max-width: 100vw;
   width: 100vw;
   height: 96px;
   border-top: 4px solid #0D1B2A;
