--- a/src/styles/components/_jumbotron.scss
+++ b/src/styles/components/_jumbotron.scss
@@ -70,7 +70,7 @@
             display: flex;
             flex-direction: row-reverse;
             flex-wrap: wrap;
-            justify-content: space-around;
+            justify-content: space-evenly;
             width: 95vw;
             min-height: calc(100vh - 96px - 51px - 92px);
             align-content: center;
@@ -84,8 +84,27 @@
             .main-text {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
-                width: 40vw;
+                justify-content: space-evenly;
+                width: 45vw;
+                flex-wrap: wrap;
+            }
+        }
+    }
+}
+@media screen and (min-width: 1024px){ 
+    .jumbotron {
+        .container{
+            .left-split {
+                .main-image {
+                    width: 60vw;
+                    height: 60vw;
+                    max-width: 512px;
+                    max-height: 512px;
+                }
+            }
+            .main-text {
+                width: 25vw;
+                border-radius: 8px;
             }
         }
     }
