--- a/src/styles/components/_animation.scss
+++ b/src/styles/components/_animation.scss
@@ -14,7 +14,7 @@
     }
 }
 
-@keyframes fade { //Adds a fade effecvt to make an item almost transparent
+@keyframes fade { //Adds a fade effect to make an item almost transparent
     0% {
         opacity: 1;
     }
