--- a/src/styles/components/_jumbotron.scss
+++ b/src/styles/components/_jumbotron.scss
@@ -1,4 +1,5 @@
 .jumbotron {
+    //sets some defaults for each page as they all use the same Jumbotron class
     text-align: center;
     background-color: $off-white;
     width: 100vw;
@@ -65,6 +66,7 @@
     }
 }
 @media screen and (min-width: 768px){ 
+    //when screen is in tablet and above it places all pages into flex and as row reverse
     .jumbotron {
         .container{
             display: flex;
@@ -92,6 +94,7 @@
     }
 }
 @media screen and (min-width: 1024px){ 
+    //when screen is at laptop and above sets some image max widths
     .jumbotron {
         .container{
             .left-split {
