--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -67,6 +67,14 @@ html, body {
   background-image: url("../assets/bread2.png");
 }
 
+.blog-card5 {
+  background-image: url("../assets/computer.jpg");
+  transition: background-image 2s;
+}
+.blog-card5:hover, .blog-card5:active {
+  background-image: url("../assets/computer2.png");
+}
+
 .blog-text img {
   width: 80vw;
   padding: 24px 0;
@@ -383,9 +391,10 @@ input[type=submit]:hover, input[type=submit]:active {
 }
 .blog-cards ul {
   list-style: none;
-}
-.blog-cards ul li {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .blog-card {
@@ -433,10 +442,10 @@ input[type=submit]:hover, input[type=submit]:active {
 
 @media screen and (min-width: 1024px) {
   .jumbotron .container .blog-card {
-    width: 20vw;
+    width: 19vw;
     background-position: center;
   }
-  .jumbotron .container .blog-text img {
+  .jumbotron .blog-text img {
     max-width: 512px;
   }
 }
