Hid x overflow as it seemed to have some when in desktop view

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -27,9 +27,10 @@
         align-items: center;
         padding-left: 10px;
         height: 50%;
-        margin: 1rem 1rem 1rem 1rem;
+       margin-right: 2.5rem;
         background-color: $primary-darkest;
         border-radius: 8px;
+
 
         a {
             display: flex;
