--- a/src/styles/components/_default.scss
+++ b/src/styles/components/_default.scss
@@ -13,3 +13,9 @@ html, body {
     width: 100vw;
     margin: 0 auto;
 }
+
+@media screen and (min-width: 1024px) {
+    body {
+        overflow-x: hidden;
+    }
+}
