changed min height on jumbotron in laptop

--- a/src/styles/components/_jumbotron.scss
+++ b/src/styles/components/_jumbotron.scss
@@ -74,7 +74,7 @@
             flex-wrap: wrap;
             justify-content: space-evenly;
             width: 95vw;
-            min-height: calc(100vh - 96px - 51px - 92px);
+            min-height: calc(100vh - 96px - 51px - 92px - 61px);
             align-content: center;
             .left-split {
                 padding: 0 1rem 0 1rem;
