--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -21,7 +21,8 @@
         }
     }
 
-    .contact-foot { //need the footer split 50/50 half with git & LinkedIn half with a contact me mailto
+    .contact-foot { 
+        //need the footer split 50/50 half with git & LinkedIn half with a contact me mailto
         display: flex;
         justify-content: flex-end;
         align-items: center;
