--- a/src/styles/components/_blog.scss
+++ b/src/styles/components/_blog.scss
@@ -19,23 +19,27 @@
         justify-content: center;
     }
 }
-.blog-card { //adds images as the cards then on hover or active hides the image
+.blog-card { 
+    //adds images as the cards then on hover or active hides the image
     height: 35vw;
     width: 35vw; 
     background-size: cover;
-    display: flex; //This centers the transparent hyperlinks
+    //This centers the transparent hyperlinks
+    display: flex; 
     align-items: center;
     justify-content: center;
     a{
         text-decoration: none;
         color: $primary-darkest;
+        //sets text to be 'invisible' initially
         opacity: 0;
         transition: opacity 2s;
     }
     &:hover,
     &:active {
         a{ 
-            opacity: 1; //as the link is hovered, makes the hyperlink text appear solid.
+            //as the link is hovered, makes the hyperlink text appear solid.
+            opacity: 1; 
         }
     }   
 }
@@ -70,14 +74,17 @@
     .jumbotron {
         .container{
             .blog-card{
-                width: 19vw; //when in laptop view, the cards alter width so they appear in a single row rather than flex, but not altering height.
-                background-position: center //centers the images as background
+                //when in desktop view, the cards alter width so they appear in a single row rather than flex, but not altering height.
+                width: 19vw; 
+                //centers the images as background
+                background-position: center 
             }
         }
 
             .blog-text {
                 img {
-                    max-width: 512px; //sets the maximum image width to be 512px as keeping it with a vw made the images appear really large on bigger viewing sizes.
+                    //sets the maximum image width to be 512px as keeping it with a vw made the images appear really large on bigger viewing sizes.
+                    max-width: 512px; 
                 }
             }
         }
