--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -15,7 +15,8 @@ input[type=text] , input[type=email], select, textarea {
     margin-bottom: 1rem;
 }
 
-textarea { //sets a standard height for the message input
+textarea { 
+    //sets a standard height for the message input
     height: 150px;
 }
 
@@ -58,7 +59,8 @@ input[type=submit] {
                 flex-wrap: wrap;
                 justify-content: space-between;
                 padding-top: 2rem;
-                width: 80vw; //found that I needed more space for the map and other contact sections than the form.
+                //found that I needed more space for the map and other contact sections than the form.
+                width: 80vw; 
 
                 .cont {
                     border: 1px solid $primary-darkest;
@@ -100,7 +102,6 @@ input[type=submit] {
                     border-radius: 15px;
                     padding: 0 .5rem 1rem .5rem;
                     height: 114px;
-                    // display: inline-block;
                 }
                 img {
                     width: 55vw;
